Update on typos and general code cleanup