@@ -1,7 +1,5 @@
 package io.github.jornegitgud.galaxyquest;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -12,7 +10,7 @@ public enum Direction {
     RIGHT;
 
     private static final List<Direction> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+            List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
